--- a/studies/index.html
+++ b/studies/index.html
@@ -15,7 +15,7 @@
     </p>
 
     <section>
-      <h1>You could have been any person in the world</h1>
+      <h1 id="theSecH1">You could have been any person in the world</h1>
       <h2>But you're here, and that's what matters</h2>
       <h3>Here is a list of things you can do:</h3>
       <ul>
@@ -30,13 +30,14 @@
         <li>Be perfect</li>
       </ul>
     </section>
-    <section>
+    <section class="future-class">
       <h1>Things that you can do today</h1>
       <ol>
         <li>Take a deep breath</li>
         <li>Practice gratitude</li>
         <li>Set small goals</li>
       </ol>
+      <p>By the other side...</p>
     </section>
     <h1>
       Always remember, <em>You could have been any person in the world</em>
