--- a/studies/index.html
+++ b/studies/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Believe in Yourself</h1>
+    <h1 data-turnGreen="false">Believe in Yourself</h1>
     <h2>Don't let destructive thoughts destroy you</h2>
     <p>
       Lorem ipsum dolor, sit amet <strong>consectetur</strong> adipisicing elit.
