--- a/studies/index.html
+++ b/studies/index.html
@@ -24,7 +24,7 @@
         <li>Keep learning</li>
       </ul>
       <h3>And here's a list of things you can't do:</h3>
-      <ul>
+      <ul id="ulSpecial">
         <li>Change the past</li>
         <li>Control everything</li>
         <li>Be perfect</li>
