--- a/studies/index.html
+++ b/studies/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="class1 class2">
     <h1 data-turnGreen="false">Believe in Yourself</h1>
     <h2>Don't let destructive thoughts destroy you</h2>
     <p>
@@ -46,6 +46,9 @@
       It's not about how you came to the world or how you are now,
       <em>it's about what you do and aspire to become</em>
     </h2>
+    <div id="cute">
+
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
