--- a/studies/index.html
+++ b/studies/index.html
@@ -46,8 +46,8 @@
       It's not about how you came to the world or how you are now,
       <em>it's about what you do and aspire to become</em>
     </h2>
-    <div id="cute">
-
+    <div id="cute" class="example">
+      <p id="cuteText" style="border: 3px solid black;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse modi accusantium, quam, explicabo necessitatibus beatae doloribus et in exercitationem temporibus voluptas. Natus repellendus atque pariatur maxime incidunt aliquam assumenda molestiae.</p>
     </div>
     <script src="script.js"></script>
   </body>
