--- a/studies/index.html
+++ b/studies/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="class1 class2">
+  <body class="class1 class2" style="height: 3000px;">
     <h1 data-turnGreen="false">Believe in Yourself</h1>
     <h2>Don't let destructive thoughts destroy you</h2>
     <p>
