--- a/studies/index.html
+++ b/studies/index.html
@@ -49,6 +49,10 @@
     <div id="cute" class="example">
       <p id="cuteText" style="border: 3px solid black;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse modi accusantium, quam, explicabo necessitatibus beatae doloribus et in exercitationem temporibus voluptas. Natus repellendus atque pariatur maxime incidunt aliquam assumenda molestiae.</p>
     </div>
+    <button class="card" id="firstButton" onclick="handleClick()">Click me1</button>
+    <button class="card" id="secondButton">Click me2</button>
+    <button class="card" id="thirdButton">Click me3</button>
+    <button class="card" id="fourthButton">Do not click me</button>
     <script src="script.js"></script>
   </body>
 </html>
