--- a/studies/index.html
+++ b/studies/index.html
@@ -49,10 +49,42 @@
     <div id="cute" class="example">
       <p id="cuteText" style="border: 3px solid black;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse modi accusantium, quam, explicabo necessitatibus beatae doloribus et in exercitationem temporibus voluptas. Natus repellendus atque pariatur maxime incidunt aliquam assumenda molestiae.</p>
     </div>
-    <button class="card" id="firstButton" onclick="handleClick()">Click me1</button>
-    <button class="card" id="secondButton">Click me2</button>
-    <button class="card" id="thirdButton">Click me3</button>
-    <button class="card" id="fourthButton">Do not click me</button>
+    <table>
+      <thead>
+        <tr>
+          <th>Column 1</th>
+          <th>Column 2</th>
+          <th>Column 3</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
+          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
+          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
+        </tr>
+        <tr>
+          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
+          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
+          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
+        </tr>
+        <tr>
+          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
+          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
+          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
+        </tr>
+        <tr>
+          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
+          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
+          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
+        </tr>
+      </tbody>
+    </table>
+    <div id="menu">
+      <button id="saveButton" data-action="save">Save</button>
+      <button id="loadButton" data-action="load">Load</button>
+      <button id="resetButton" data-action="reset">Reset</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
