--- a/studies/index.html
+++ b/studies/index.html
@@ -46,45 +46,8 @@
       It's not about how you came to the world or how you are now,
       <em>it's about what you do and aspire to become</em>
     </h2>
-    <div id="cute" class="example">
-      <p id="cuteText" style="border: 3px solid black;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse modi accusantium, quam, explicabo necessitatibus beatae doloribus et in exercitationem temporibus voluptas. Natus repellendus atque pariatur maxime incidunt aliquam assumenda molestiae.</p>
-    </div>
-    <table>
-      <thead>
-        <tr>
-          <th>Column 1</th>
-          <th>Column 2</th>
-          <th>Column 3</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
-          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
-          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
-        </tr>
-        <tr>
-          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
-          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
-          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
-        </tr>
-        <tr>
-          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
-          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
-          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
-        </tr>
-        <tr>
-          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
-          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
-          <td><p style="margin: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, eius?</p></td>
-        </tr>
-      </tbody>
-    </table>
-    <div id="menu">
-      <button id="saveButton" data-action="save">Save</button>
-      <button id="loadButton" data-action="load">Load</button>
-      <button id="resetButton" data-action="reset">Reset</button>
-    </div>
+    <a href="https://www.youtube.com" onclick="return false">My channel</a>
+    <a href="https://www.facebook.com">My Facebook</a>
     <script src="script.js"></script>
   </body>
 </html>
