--- a/studies/index.html
+++ b/studies/index.html
@@ -46,8 +46,8 @@
       It's not about how you came to the world or how you are now,
       <em>it's about what you do and aspire to become</em>
     </h2>
-    <button class="button">Double Click Me</button>
-    <button class="button" id="btn2">Click Me</button>
+    <button class="button">Hello world</button>
+    <input type="text" value="Mouse over me please" onmousemove="this.value=event.clientX+':'+event.clientY" />
     <script src="script.js"></script>
   </body>
 </html>
