--- a/studies/index.html
+++ b/studies/index.html
@@ -46,8 +46,32 @@
       It's not about how you came to the world or how you are now,
       <em>it's about what you do and aspire to become</em>
     </h2>
-    <button class="button">Hello world</button>
-    <input type="text" value="Mouse over me please" onmousemove="this.value=event.clientX+':'+event.clientY" />
+    <table>
+      <thead>
+        <tr>
+          <th>Column 1</th>
+          <th>Column 2</th>
+          <th>Column 3</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td id="row1col1">1</td>
+          <td id="row1col2">2</td>
+          <td id="row1col3">3</td>
+        </tr>
+        <tr>
+          <td id="row2col1">4</td>
+          <td id="row2col2">5</td>
+          <td id="row2col3">6</td>
+        </tr>
+        <tr>
+          <td id="row3col1">7</td>
+          <td id="row3col2">8</td>
+          <td id="row3col3">9</td>
+        </tr>
+      </tbody>
+    </table>
     <script src="script.js"></script>
   </body>
 </html>
