--- a/studies/index.html
+++ b/studies/index.html
@@ -37,7 +37,7 @@
         <li>Practice gratitude</li>
         <li>Set small goals</li>
       </ol>
-      <p>By the other side...</p>
+      <p class="ball">By the other side...</p>
     </section>
     <h1>
       Always remember, <em>You could have been any person in the world</em>
