--- a/studies/index.html
+++ b/studies/index.html
@@ -72,6 +72,28 @@
         </tr>
       </tbody>
     </table>
+    <form action="" name="firstForm" id="firstForm">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required />
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required />
+      <input type="submit" value="Submit" />
+      <input type="radio" id="option1" name="option" value="option1" />
+      <input type="radio" id="option2" name="option" value="option2" />
+      <input type="radio" id="option3" name="option" value="option3" />
+    </form>
+    <form action="" name="secondForm" id="secondForm">
+      <label for="age">Age:</label>
+      <input type="number" id="age" name="age" required />
+      <label for="gender">Gender:</label>
+      <select id="gender" name="gender" required>
+        <option value="">Select your gender</option>
+        <option value="male">Male</option>
+        <option value="female">Female</option>
+        <option value="other">Other</option>
+      </select>
+      <input type="submit" value="Submit" />
+    </form>
     <script src="script.js"></script>
   </body>
 </html>
