--- a/studies/index.html
+++ b/studies/index.html
@@ -73,12 +73,13 @@
       </tbody>
     </table>
     <form action="" name="firstForm" id="firstForm">
-      <input type="email" id="emailInput" name="emailInput" />
+      <input type="email" id="email1" name="emailInput" />
       <p id="emailError" style="color: red;"></p>
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required />
       <label for="email">Email:</label>
-      <input type="email" id="secondEmailInput" name="email" required />
+      <input type="email" id="email2" name="email" required />
+      <p id="feedback"></p>
       <input type="submit" value="Submit" />
       <input type="radio" id="option1" name="option" value="option1" />
       <input type="radio" id="option2" name="option" value="option2" />
@@ -94,7 +95,12 @@
         <option value="female">Female</option>
         <option value="other">Other</option>
       </select>
+      <input type="checkbox" id="checkbox1" name="subscribe" />
+      <label for="checkbox1">Subscribe to newsletter</label>
+      <input type="checkbox" id="checkbox2" name="terms" required />
+      <label for="checkbox2">I agree to the terms and conditions</label>
       <input type="submit" value="Submit" />
+      <textarea id="textarea1" name="comments" placeholder="Your comments here..."></textarea>
     </form>
     <ul id="list">
       <li>Item 1</li>
