--- a/studies/index.html
+++ b/studies/index.html
@@ -9,10 +9,11 @@
   <body class="class1 class2" style="height: 3000px;">
     <h1 data-turnGreen="false" id="showScroll">Believe in Yourself</h1>
     <h2>Don't let destructive thoughts destroy you</h2>
-    <p>
-      Lorem ipsum dolor, sit amet <strong>consectetur</strong> adipisicing elit.
+    <p id="otherTest">
+      Lorem ipsum dolor, sit amet <strong>consectetur</strong> <i>adipisicing elit.</i>
       Temporibus, omnis.
     </p>
+    <p id="test">Hello</p>
 
     <section>
       <h1 id="theSecH1">You could have been any person in the world</h1>
